k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-gallery
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-gallery
  template:
    metadata:
      labels:
        app: image-gallery
    spec:
      containers:
      - name: image-gallery
        image: cr.yandex/crpnq5gfo3m7alvcvomq/image-gallery-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
