k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-gallery-service
spec:
  selector:
    app: image-gallery
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
